# TokenizerBench

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
analysis/: plot.py
data/: __init__.py  human_languages.py  programming_languages.py  scientific_formulas.py
tokenizerbench/: __init__.py  evaluate.py  metrics.py
tokenizerbench/data/: edge_cases.py
tokenizerbench/results/: README.md
tokenizerbench/spaces/: README.md  app.py  requirements.txt
