[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenizerbench"
version = "0.2.0"
description = "Benchmark tokenizers across 84 languages, 17 code languages, math formulas, and edge cases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []   # core has no deps — tokenizer backends are optional

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.6.0"]
hf = ["transformers>=4.40.0", "tokenizers>=0.19.0"]
sentencepiece = ["sentencepiece>=0.2.0"]
analysis = ["matplotlib>=3.8", "seaborn>=0.13", "pandas>=2.0"]
all = ["tiktoken>=0.6.0", "transformers>=4.40.0", "sentencepiece>=0.2.0", "tokenizers>=0.19.0",
    "sacremoses>=0.1.1", "nltk>=3.8.1", "pandas>=2.0.0", "tabulate>=0.9.0", "matplotlib>=3.8.0",
    "seaborn>=0.13.0", "jupyter>=1.0.0", ]

[project.scripts]
tokenizerbench = "tokenizerbench.evaluate:main"

[tool.hatch.build.targets.wheel]
packages = ["tokenizerbench"]